tests/accept/lab1_should_accept.ul
int bar ()
{
    return 2;
}

void main ()
{

}
