tests/reject/globals.ul
float f;
f = 10;
int can = 10;

void main () {

}
